Add support for ID types in Resources.obtainTypedArray() Fix length of TypedArray from Resources.obtainTypedArray()

--- a/robolectric/src/test/resources/res/values/ids.xml
+++ b/robolectric/src/test/resources/res/values/ids.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <item name="idIDeclaredInXml" type="id"/>
+  <item name="id_declared_in_item_tag" type="id"/>
+  <item name="id_with_string_value" type="id">string value</item>
+  <id name="id_declared_in_id_tag"/>
 </resources>
