--- a/robolectric/src/test/resources/res/values/typed_arrays.xml
+++ b/robolectric/src/test/resources/res/values/typed_arrays.xml
@@ -25,4 +25,9 @@
         <item>@color/typed_array_orange</item>
         <item>?attr/animalStyle</item>
     </array>
+
+    <array name="typed_array_with_resource_id">
+        <item>@id/id_declared_in_id_tag</item>
+        <item>@id/id_declared_in_item_tag</item>
+    </array>
 </resources>
