Add support for array references within arrays.

--- a/robolectric/src/test/resources/res/values/typed_arrays.xml
+++ b/robolectric/src/test/resources/res/values/typed_arrays.xml
@@ -24,10 +24,12 @@
         <item>@drawable/an_image</item>
         <item>@color/typed_array_orange</item>
         <item>?attr/animalStyle</item>
+        <item>@array/typed_array_values</item>
     </array>
 
     <array name="typed_array_with_resource_id">
         <item>@id/id_declared_in_id_tag</item>
         <item>@id/id_declared_in_item_tag</item>
+        <item>@id/id_declared_in_layout</item>
     </array>
 </resources>
