Support array references from within array resources.

--- a/robolectric/src/test/resources/res/values/typed_arrays.xml
+++ b/robolectric/src/test/resources/res/values/typed_arrays.xml
@@ -25,6 +25,7 @@
         <item>@color/typed_array_orange</item>
         <item>?attr/animalStyle</item>
         <item>@array/typed_array_values</item>
+        <item>@style/Theme.Robolectric</item>
     </array>
 
     <array name="typed_array_with_resource_id">
