Add missing parent "Theme" which is required for the parent.child theme inherritance.

--- a/robolectric/src/test/resources/res/values/themes.xml
+++ b/robolectric/src/test/resources/res/values/themes.xml
@@ -35,6 +35,9 @@
     <item name="someLayoutTwo">?someLayoutOne</item>
   </style>
 
+  <style name="Theme">
+  </style>
+
   <style name="Theme.ThemeReferredToByParentAttrReference">
     <item name="parentStyleReference">@style/StyleReferredToByParentAttrReference</item>
   </style>
