--- a/robolectric/src/test/resources/res/layout-sw720dp/layout_smallest_width.xml
+++ b/robolectric/src/test/resources/res/layout-sw720dp/layout_smallest_width.xml
@@ -5,7 +5,7 @@
         android:orientation="vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
-        <TextView android:id="@id/text1"
+        <TextView android:id="@+id/text1"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="720"/>
