layout_weight should be a float rather than "fill_parent" string

--- a/robolectric/src/test/resources/res/layout/lam_inner.xml
+++ b/robolectric/src/test/resources/res/layout/lam_inner.xml
@@ -10,7 +10,7 @@
 
   <TextView
     android:id="@+id/lam_inner_contents"
-    android:layout_weight="fill_parent"
+    android:layout_weight="0.1"
     android:layout_height="fill_parent"
     />
 </LinearLayout>
