Declare missing attribute "message" in CustomView style. itemType attribute is an enum so use appropriate value.

--- a/robolectric/src/test/resources/res/layout/custom_layout.xml
+++ b/robolectric/src/test/resources/res/layout/custom_layout.xml
@@ -5,5 +5,5 @@
     xmlns:robolectric="http://schemas.android.com/apk/res/org.robolectric"
     android:gravity="center"
     robolectric:message="@string/hello"
-    robolectric:itemType="string"
+    robolectric:itemType="marsupial"
     />
