--- a/robolectric/src/test/resources/res/layout/custom_layout5.xml
+++ b/robolectric/src/test/resources/res/layout/custom_layout5.xml
@@ -5,5 +5,5 @@
     xmlns:robolectric="http://schemas.android.com/apk/res-auto"
     android:gravity="center"
     robolectric:message="@string/hello"
-    robolectric:itemType="string"
+    robolectric:itemType="marsupial"
     />
