--- a/robolectric/src/test/resources/res/values/bools.xml
+++ b/robolectric/src/test/resources/res/values/bools.xml
@@ -2,9 +2,7 @@
 <resources>
   <bool name="false_bool_value">false</bool>
   <bool name="true_bool_value">true</bool>
-  <bool name="zero_is_false">0</bool>
-  <bool name="integers_are_true">7</bool>
-  <bool name="reference_to_true">@true_bool_value</bool>
+  <bool name="reference_to_true">@bool/true_bool_value</bool>
   <item name="true_as_item" type="bool">true</item>
   <bool name="different_resource_boolean">false</bool>
   <bool name="typed_array_true">true</bool>
