Add id declaration id_declared_in_layout in a layout that is required by typed_arrays.xml

--- a/robolectric/src/test/resources/res/layout/activity_main_1.xml
+++ b/robolectric/src/test/resources/res/layout/activity_main_1.xml
@@ -3,6 +3,7 @@
     android:layout_height="match_parent" >
 
     <LinearLayout
+        android:id="@+id/id_declared_in_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical" >
