--- a/robolectric/src/test/resources/res/values/integers.xml
+++ b/robolectric/src/test/resources/res/values/integers.xml
@@ -4,6 +4,6 @@
   <integer name="loneliest_number">1</integer>
   <integer name="there_can_be_only">@integer/loneliest_number</integer>
   <integer name="hex_int">0xFFFF0000</integer>
-  <integer name="reference_to_meaning_of_life">@meaning_of_life</integer>
+  <integer name="reference_to_meaning_of_life">@integer/meaning_of_life_as_item</integer>
   <item name="meaning_of_life_as_item" type="integer">42</item>
 </resources>
