Resources should parse with aapt (#3065)
* Add support for setting Build.VERSION.CODENAME

This is required since BuildCompat checks CODENAME for developer preview
versions of Android, e.g: BuildCompat.isAtLeastO()

Make test fragment classes public static as required with developer
preview version of support library

* Made copy of TestAndroidManifest.xml -> AndroidManifest.xml aapt only accepts file named AndroidManifest.xml.
TODO: Merge all other Manfiests in this package into AndroidManifest.xml

* Remove id declared as <id name="...."/> this is not a valid way of declaring Android resource ids.

* Add missing attributes referenced from Theme.AnotherTheme

* Add missing parent "Theme" which is required for the parent.child theme inherritance.

* Remove "Null" string parent handling, this was originally added in error as we didn't see a literal "Null" parent style in the example we looked at. In Android there is no implicit "Null" parent.

* Fix issues in test_anim1.xml:-

* Use a real interpolator
* Use real float values rather than invalid "float" string for float attributes
* Use real existing drawables in animation list.

* generate @+id/text1 in layout_smallest_width.xml as it doesn't otherwise exist.

* layout_weight should be a float rather than "fill_parent" string

* Declare missing attribute "message" in CustomView style.
itemType attribute is an enum so use appropriate value.

* Fix bools.xml:-

* Integers are not allowed and not interpretted as bools as assumed.
* Fix resource reference type to include type.

* Fix colors.xml:-

* Remove android_red, cannot use a raw string "red" and it is otherwise unused anyway.

* Add id declaration id_declared_in_layout in a layout that is required by typed_arrays.xml

* Fix broken reference in integers.xml

* Remove attrFromLib1 from main project as it is declared in lib1

* averageSheepWidth needs to be a reference

* FIx style reference missing style type, should

--- a/robolectric/src/test/resources/res/layout/custom_layout4.xml
+++ b/robolectric/src/test/resources/res/layout/custom_layout4.xml
@@ -2,7 +2,7 @@
 
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:robolectric="http://schemas.android.com/apk/res/org.robolectric"
+    xmlns:robolectric="http://schemas.android.com/apk/res-auto"
     xmlns:fakens="http://example.com/fakens"
     >
   <org.robolectric.android.CustomView
@@ -11,7 +11,7 @@
       android:layout_height="wrap_content"
       android:gravity="center"
       robolectric:message="@string/hello"
-      robolectric:itemType="string"
+      robolectric:itemType="marsupial"
       fakens:message="@layout/text_views"
       >
     <View
