--- a/robolectric/src/test/resources/res/layout/custom_layout2.xml
+++ b/robolectric/src/test/resources/res/layout/custom_layout2.xml
@@ -22,4 +22,13 @@
         android:layout_height="wrap_content"
         />
   </org.robolectric.android.CustomView2>
+
+  <ProgressBar
+      android:id="@+id/blocking_progress_bar"
+      style="?android:attr/indeterminateProgressStyle"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_centerInParent="true"
+      android:indeterminate="true"
+      android:interpolator="@android:interpolator/cycle" />
 </org.robolectric.android.CustomView2>
