--- a/robolectric/src/test/resources/res/layout/text_views_hints.xml
+++ b/robolectric/src/test/resources/res/layout/text_views_hints.xml
@@ -4,6 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:orientation="vertical"
     >
   <TextView
       android:id="@+id/black_text_view_hint"
@@ -11,6 +12,7 @@
       android:layout_height="wrap_content"
       android:hint="Black Hint"
       android:textColorHint="#000000"
+      android:textSize="128sp"
       />
 
   <TextView
@@ -19,6 +21,7 @@
       android:layout_height="wrap_content"
       android:hint="White Hint"
       android:textColorHint="@android:color/white"
+      android:textSize="128sp"
       />
 
   <TextView
@@ -27,5 +30,11 @@
       android:layout_height="wrap_content"
       android:hint="Grey Hint"
       android:textColorHint="@color/grey42"
+      android:textSize="128sp"
+      />
+  <ImageView
+      android:layout_width="500sp"
+      android:layout_height="500sp"
+      android:src="@drawable/an_image"
       />
 </LinearLayout>
