--- a/robolectric/src/test/resources/res/values/attrs.xml
+++ b/robolectric/src/test/resources/res/values/attrs.xml
@@ -60,6 +60,7 @@
   <attr name="anAttribute" format="reference"/>
   <attr name="attributeReferencingAnAttribute" format="reference"/>
   <attr name="circularReference" format="reference"/>
+  <attr name="title" format="string"/>
 
   <declare-styleable name="CustomStateView">
     <attr name="stateFoo" format="boolean" />
