--- a/robolectric/src/test/resources/res/values/attrs.xml
+++ b/robolectric/src/test/resources/res/values/attrs.xml
@@ -67,13 +67,13 @@
   </declare-styleable>
 
   <declare-styleable name="Theme.AnotherTheme.Attributes">
-    <attr name="averageSheepWidth" format="reference"/>
-    <attr name="isSugary" format="reference"/>
-    <attr name="logoHeight" format="reference"/>
-    <attr name="logoWidth" format="reference"/>
+    <attr name="averageSheepWidth" format="reference|dimension"/>
+    <attr name="isSugary" format="reference|boolean"/>
+    <attr name="logoHeight" format="reference|dimension"/>
+    <attr name="logoWidth" format="dimension"/>
     <attr name="styleReference" format="reference"/>
     <attr name="styleReferenceWithoutExplicitType" format="reference"/>
     <attr name="snail" format="reference"/>
-    <attr name="averageSheepWidth" format="reference"/>
+    <attr name="altTitle" format="reference|string"/>
   </declare-styleable>
 </resources>
